<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/llogo"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llogo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFFFFF"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                android:textColor="#F8000000" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/Contraseña"
                android:inputType="textPassword"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#FFD740"
                android:gravity="center|clip_vertical|center_vertical"
                android:text="@string/Ingresar"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tvCargando"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|clip_vertical|center_vertical"
                android:text="@string/Cargando"
                android:textColor="#434343"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="0dp"

        android:gravity="center"
        android:text="@string/Contacto">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="0dp"
        android:gravity="end"
        android:text="@string/Version">

    </TextView>

</RelativeLayout>