<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".InicioAlumnoActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/logoIA"
                android:layout_width="150sp"
                android:layout_height="150dp"
                android:layout_marginTop="05dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                android:id="@+id/cvInfoUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#FFFFFF"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="1dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvIniUbicacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/Ubicacion"
                            android:textSize="23sp" />

                        <TextView
                            android:id="@+id/tvIniHora"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Hora"
                            android:textColor="#FF5252"
                            android:textSize="15sp" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/tvIniNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/Nombre"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/tvIniMatricula"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="end"
                        android:text="@string/Matricula"
                        android:textColor="#FC7C86"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnInfoDeCuenta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="#FFD740"
                        android:drawableBottom="@drawable/ic_person"
                        android:text="@string/InfoDeCuenta"
                        android:textColor="#fff"
                        android:textSize="20sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAvisos"
                        android:layout_width="140dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="#082555"
                        android:drawableBottom="@drawable/ic_avisos"
                        android:gravity="bottom|center_horizontal"
                        android:text="@string/Avisos"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnHistorial"
                        android:layout_width="140dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="#082555"
                        android:drawableBottom="@drawable/ic_historial"
                        android:gravity="bottom|center_horizontal"
                        android:text="@string/Historial"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnCali"
                        android:layout_width="140dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="#082555"
                        android:drawableBottom="@drawable/ic_notas"
                        android:gravity="bottom|center_horizontal"
                        android:text="@string/Calificaciones"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btnGrupo"
                        android:layout_width="140dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="#082555"
                        android:drawableBottom="@drawable/ic_grupo"
                        android:gravity="bottom|center_horizontal"
                        android:text="@string/GrupoEscolar"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="0dp"
        android:gravity="end"
        android:text="@string/Version"/>

</RelativeLayout>