<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvInfoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="#FFFFFF"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRowUbicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/Ubicacion"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/tvRowHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Hora"
                    android:textColor="#FF5252"
                    android:textSize="15sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/tvRowNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Nombre"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tvRowMatricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="end"
                android:text="@string/Matricula"
                android:textColor="#FC7C86"
                android:textSize="15sp" />




        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>