<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:backgroundTint="#FFFFFF"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10sp"
                android:layout_height="match_parent"
                android:background="#FFD740"
                />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvHUbicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Ubicacion"
                    android:background="#323232"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:textSize="25sp">

                </TextView>

                <TextView
                    android:id="@+id/tvHHora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Hora"
                    android:gravity="end"
                    android:textColor="#FF6E40"
                    android:textSize="12sp">

                </TextView>
                <TextView
                    android:id="@+id/tvHFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Fecha"
                    android:gravity="end"
                    android:textSize="15sp">

                </TextView>



            </LinearLayout>

        </LinearLayout>



    </androidx.cardview.widget.CardView>



</LinearLayout>