<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:backgroundTint="#6C6C6C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardElevation="1dp"
        card_view:cardCornerRadius="4dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPeriodo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Periodo"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:padding="10sp"
                    android:background="#FFAB40">
                </TextView>

                <TextView
                    android:id="@+id/tvMateria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/Materia"
                    android:layout_marginLeft="5sp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp">
                </TextView>

                <TextView
                    android:id="@+id/tvResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textColor="#40C4FF"
                    android:textSize="20sp"
                    android:padding="5sp">
                </TextView>



            </LinearLayout>

            <TextView
                android:id="@+id/tvCFecha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Fecha"
                android:gravity="end"
                android:textSize="15sp"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:padding="5sp">
            </TextView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>